k8s/env.yaml
apiVersion: v1
kind: Pod
metadata:
  name: my-gke-demo-secret
spec:
  containers:
  - name: envars-test-container
    image: my-gke-demo-1
