k8s/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: my-gke-demo-1
spec:
  selector:
    app: my-gke-demo-1
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
  type: LoadBalancer
